log-area overflow-x fix + some margin tweaking

--- a/app/style/GetStarted.less
+++ b/app/style/GetStarted.less
@@ -858,6 +858,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .getstarted.loader .loader-bar-estimation{
+    display: none;
+  }
   .release-notes {
     height: 70vh;
   }    
@@ -981,6 +984,8 @@
     &.logs {
       margin-left: -10px;
       margin-right: -10px;
+      margin-top:60px;
+
       .log-area .log-area-logs{
         margin: 20px;
       }
@@ -988,7 +993,7 @@
         margin-left:10px;
       }
       .go-back-screen-button-area{
-        top:107px;
+        top:85px;
         right:20px;
       }    
     }    
