--- a/app/style/Logs.less
+++ b/app/style/Logs.less
@@ -8,6 +8,10 @@
   margin-top: 15px;
   float: left;
 
+  &:nth-of-type(1n){
+    margin-top:8px;
+  }
+
   .log-area-logs {
     margin: 30px 42px 30px 42px;
 
@@ -19,6 +23,7 @@
       background-color: var(--background-back-color);
       border: none;
       color: var(--modal-text);
+      white-space: pre-line;
     }
   }
 
